# desafio-lojaintegrada

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  yoyo.ini
src/app/: database_repository.py  main.py  swagger_template.yaml
src/app/coupon/: coupon.py  coupon_repository.py
src/app/item/: item.py  item_repository.py
src/app/shared/: database_repository.py  json_log.py  middlewares.py
src/app/shopping_cart/: coupon_already_exists_on_shopping_cart.py  item_already_exists_on_shopping_cart.py  shopping_cart.py  shopping_cart_controller.py  shopping_cart_item.py  shopping_cart_repository.py
src/app/shopping_cart/controllers/: shopping_cart_controller.py  shopping_cart_coupon_controller.py  shopping_cart_item_controller.py
src/app/shopping_cart/exceptions/: coupon_already_exists_on_shopping_cart_exception.py  item_already_exists_on_shopping_cart_exception.py
src/app/shopping_cart/models/: shopping_cart.py  shopping_cart_coupon.py  shopping_cart_item.py
src/migrations/: shopping_cart20210823_01_wQKiM-adding-shopping-cart-table.py  shopping_cart20210823_02_6J9dc-add-item-table.py  shopping_cart20210823_03_S9agh-add-coupon-table.py
src/tests/: conftest.py  test_hello.py  test_main.py  test_ping.py  test_shopping_cart.py  test_v1_shopping_cart_DELETE.py  test_v1_shopping_cart_GET.py  test_v1_shopping_cart_coupons_POST.py  test_v1_shopping_cart_coupons_[id]_DELETE.py  test_v1_shopping_cart_items_POST.py  test_v1_shopping_cart_items_[id]_DELETE.py  test_v1_shopping_cart_items_[id]_PUT.py
