[tool.poetry]
name = "shopping-cart-api"
version = "0.1.0"
description = "A simple shopping cart api"
authors = ["Daniel Lima"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3"
chardet = "^4"
aiodns = "^3"
aiohttp-swagger = "^1"
schema = "^0"
aiomysql = "^0"
yoyo-migrations = "^7"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-aiohttp = "^0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"